Remove usage of deprecated constructors and replace StringBuffer with StringBuilder
Change-Id: I2c11ad3301c7f5a7c1397804c45b0c9004d75fbd
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>